Removed class with only 2 samples

--- a/Nursery_problem.ipynb
+++ b/Nursery_problem.ipynb
@@ -2803,7 +2803,6 @@
     "\n",
     "def oneHotEncoder(data, single_column=False):\n",
     "    data_encoded = []\n",
-    "    i = 0\n",
     "    for col in data:\n",
     "        if single_column:\n",
     "            values = array(data)\n",
@@ -2813,11 +2812,18 @@
     "        onehot_encoder = OneHotEncoder(sparse=False, categories='auto')\n",
     "        onehot_encoded = onehot_encoder.fit_transform(values)\n",
     "        data_encoded.append(onehot_encoded)\n",
-    "        i =+ 1;\n",
     "        if single_column:\n",
     "            break\n",
-    "    return data_encoded\n",
-    "\n",
+    "    return data_encoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ndf = ndf[ndf['RESULT'] != 'recommend'] # Se remueve del conjunto de datos la categoría que solo tiene 2 muestras.\n",
     "X_original = ndf.iloc[:, :-1].values\n",
     "Y_original = ndf.iloc[:, 8].values\n",
     "X_encoded = oneHotEncoder(X_original)\n",
