One hot encoding working

--- a/Nursery_problem.ipynb
+++ b/Nursery_problem.ipynb
@@ -2783,7 +2783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 76,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2801,38 +2801,51 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
-    "def oneHotEncoder(data, single_column=False):\n",
-    "    data_encoded = []\n",
-    "    for col in data:\n",
-    "        if single_column:\n",
-    "            values = array(data)\n",
-    "        else:\n",
-    "            values = array(col)\n",
+    "def oneHotEncoder(data):\n",
+    "    data_encoded = np.zeros((data.shape[0],0))\n",
+    "    if len(data.shape) == 1:\n",
+    "        num_of_cols = 1\n",
+    "    else:\n",
+    "        num_of_cols = data.shape[1]\n",
+    "    for col_index in range(num_of_cols):\n",
+    "        values = array(data[:,col_index])\n",
     "        values = values.reshape((-1,1))\n",
     "        onehot_encoder = OneHotEncoder(sparse=False, categories='auto')\n",
     "        onehot_encoded = onehot_encoder.fit_transform(values)\n",
-    "        data_encoded.append(onehot_encoded)\n",
-    "        if single_column:\n",
-    "            break\n",
+    "        data_encoded = np.concatenate((data_encoded, onehot_encoded), axis = 1)\n",
     "    return data_encoded"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-77-d9a8f972f8a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mY_original\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mndf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mX_encoded\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moneHotEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_original\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mY_encoded\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moneHotEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY_original\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mY_encoded\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-76-acf423644bc4>\u001b[0m in \u001b[0;36moneHotEncoder\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mnum_of_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mcol_index\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_of_cols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcol_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0monehot_encoder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mOneHotEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcategories\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'auto'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
+     ]
+    }
+   ],
    "source": [
     "ndf = ndf[ndf['RESULT'] != 'recommend'] # Se remueve del conjunto de datos la categoría que solo tiene 2 muestras.\n",
     "X_original = ndf.iloc[:, :-1].values\n",
     "Y_original = ndf.iloc[:, 8].values\n",
     "X_encoded = oneHotEncoder(X_original)\n",
-    "Y_encoded = oneHotEncoder(Y_original, single_column=True)"
+    "Y_encoded = oneHotEncoder(Y_original)\n",
+    "Y_encoded.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2847,7 +2860,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Muestras: 12960 - Variables/Atributos: 9\n"
+      "Muestras: 12958 - Variables/Atributos: 9\n"
      ]
     }
    ],
@@ -2858,9 +2871,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=float64)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
@@ -2873,7 +2897,9 @@
     "\n",
     "def naive_bayes():\n",
     "    ''\n",
-    "    "
+    "\n",
+    "#x1,y1,x2,y2 = split_data(X_encoded, Y_encoded)\n",
+    "Y_encoded"
    ]
   }
  ],
