--- a/Nursery_problem.ipynb
+++ b/Nursery_problem.ipynb
@@ -2950,7 +2950,8 @@
     "folds_s = [2, 3, 5, 7, 10]\n",
     "errores = []\n",
     "stds = []\n",
-    "# Tratar de enconta\n",
+    "# Tratar de encontrar el modo de variar el número de vecinos y el número de folds.\n",
+    "# El error se minimiza\n",
     "for neighbors in neighbor_s:\n",
     "    error, std = K_Nearest_Neighbor(neighbors, folds=7)\n",
     "    errores.append(error)\n",
